--- a/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
+++ b/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
@@ -834,6 +834,9 @@
     <script src="../Lib/Js/admin.js"></script>
     <script src="../Lib/Js/pages/index.js"></script>
 
+    <!-- Bootstrap Tags Input Plugin Js -->
+    <script src="../Lib/plugins/bootstrap-tagsinput/bootstrap-tagsinput.js"></script>
+
     <%--<!-- Demo Js -->
     <script src="../Lib/Js/demo.js"></script>--%>
 </body>
