--- a/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
+++ b/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
@@ -818,7 +818,7 @@
     <script src="../Lib/Plugins/jquery/jquery.min.js"></script>
 
     <script type="text/javascript">
-         $(document).ready(function () {
+         $(document).ready(()=> {
              $('#txtDate').bootstrapMaterialDatePicker({ time: false });             
          });
 
