Update candidatemaster page

--- a/HRManagementApp/HRManagementApp/User/candidateDashboard.Master
+++ b/HRManagementApp/HRManagementApp/User/candidateDashboard.Master
@@ -314,7 +314,7 @@
             <div class="menu">
                 <ul class="list">                    
                     <li class="active">
-                        <a href="index.html">
+                        <a href="default.aspx">
                             <i class="material-icons">home</i>
                             <span>Careers</span>
                         </a>
