--- a/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
+++ b/HRManagementApp/HRManagementApp/Admin/Dashboard.Master
@@ -294,14 +294,22 @@
                     <!-- #END# Tasks -->
 
                     <!-- User Setting -->
-                    <li class="dropdown">
+                    <%--<li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
                             <i class="material-icons">person</i>                            
                         </a>
-                    </li>
+                    </li>--%>
                     <!-- #END# User Setting -->
 
-                    <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
+                    <li class="dropdown">
+                            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <i class="material-icons">person</i>
+                            </a>
+                            <ul class="dropdown-menu pull-right">
+                                <li><a href="javascript:void(0);">Account Setting</a></li>
+                                <li><a href="Login.aspx">Logout</a></li>                                
+                            </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -329,6 +337,12 @@
                         <a href="EmployeeProjectManagement.aspx">
                             <i class="material-icons">contacts</i>
                             <span>Employee Project Management</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="UserSignup.aspx">
+                            <i class="material-icons">person</i>
+                            <span>User Management</span>
                         </a>
                     </li>
                     <li>
