--- a/HRManagementApp/HRManagementApp/User/candidateDashboard.Master
+++ b/HRManagementApp/HRManagementApp/User/candidateDashboard.Master
@@ -293,15 +293,15 @@
                     </li>
                     <!-- #END# Tasks -->
 
-                    <!-- User Setting -->
                     <li class="dropdown">
-                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                            <i class="material-icons">person</i>                            
-                        </a>
+                            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <i class="material-icons">person</i>
+                            </a>
+                            <ul class="dropdown-menu pull-right">
+                                <li><a href="javascript:void(0);">Account Setting</a></li>
+                                <li><a href="Signin.aspx">Logout</a></li>                                
+                            </ul>
                     </li>
-                    <!-- #END# User Setting -->
-
-                    <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
                 </ul>
             </div>
         </div>
